Fin page d’accueil

--- a/Tps/Tp01/part1/index.html
+++ b/Tps/Tp01/part1/index.html
@@ -9,7 +9,28 @@
 </head>
 
 <body>
-
+    <h1>
+        BlogueIno
+    </h1>
+    <ul>
+        <li>Home</li>
+        <li>Mes articles</li>
+        <li>Apropos</li>
+        <li>Contact moi</li>
+    </ul>
+    <h2>Bienvenu dans mon blogue</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, dolores error, excepturi incidunt perspiciatis et
+        ipsam architecto harum praesentium optio neque aperiam. Possimus assumenda, consectetur nihil dolorum recusandae
+        a dolore, architecto nam dicta, dignissimos provident vero iusto! Eaque, minima ipsa.
+    </p>
+    <img src="./images/img.jpg" alt="" width="150">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, dolores error, excepturi incidunt perspiciatis et
+        ipsam architecto harum praesentium optio neque aperiam. Possimus assumenda, consectetur nihil dolorum recusandae
+        a dolore, architecto nam dicta, dignissimos provident vero iusto! Eaque, minima ipsa.
+    </p>
+    <p>
+        &copy; Yassir Ait Mazigh 2021
+    </p>
 </body>
 
 </html>
