--- a/Tps/Tp01/part1/apropos.html
+++ b/Tps/Tp01/part1/apropos.html
@@ -7,6 +7,26 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <li>
+            <a href="./index.html">Home</a>
+        </li>
+        <li>
+            <a href="./articles.html">
+                Mes articles
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                Apropos
+            </a>
+        </li>
+        <li>
+            <a href="./contact.html">
+                Contact moi
+            </a>
+        </li>
+    </ul>
     <h1>Qui suis-je?</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia enim tempora aperiam, consectetur sunt doloribus odit libero consequuntur provident, necessitatibus placeat accusantium praesentium voluptates temporibus? Facere, molestiae ullam dolor id aliquam placeat? Corporis expedita fugit nihil voluptatibus, pariatur illo nobis mollitia? Magni, repellend?</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia enim tempora aperiam, consectetur sunt doloribus odit libero consequuntur provident, necessitatibus placeat accusantium praesentium voluptates temporibus? Facere, molestiae ullam dolor id aliquam placeat? Corporis expedita fugit nihil voluptatibus, pariatur illo nobis mollitia? Magni, repellend?</p>
