--- a/Tps/Tp01/part1/articles.html
+++ b/Tps/Tp01/part1/articles.html
@@ -9,6 +9,26 @@
 </head>
 
 <body>
+    <ul>
+        <li>
+            <a href="./index.html">Home</a>
+        </li>
+        <li>
+            <a href="#">
+                Mes articles
+            </a>
+        </li>
+        <li>
+            <a href="./apropos.html">
+                Apropos
+            </a>
+        </li>
+        <li>
+            <a href="./contact.html">
+                Contact moi
+            </a>
+        </li>
+    </ul>
     <h1>Mes Articles</h1>
     <h3>Html & Css</h3>
     <img src="./images/html-file.png" alt="Html" width="30">
