--- a/Tps/Tp01/part1/contact.html
+++ b/Tps/Tp01/part1/contact.html
@@ -9,6 +9,26 @@
 </head>
 
 <body>
+    <ul>
+        <li>
+            <a href="./index.html">Home</a>
+        </li>
+        <li>
+            <a href="./articles.html">
+                Mes articles
+            </a>
+        </li>
+        <li>
+            <a href="./apropos.html">
+                Apropos
+            </a>
+        </li>
+        <li>
+            <a href="#">
+                Contact moi
+            </a>
+        </li>
+    </ul>
     <h1>Me Contacter</h1>
     <form action="./index.html" method="get">
         <label for="name">Nom :</label>
