--- a/Tps/Tp01/part1/index.html
+++ b/Tps/Tp01/part1/index.html
@@ -13,10 +13,24 @@
         BlogueIno
     </h1>
     <ul>
-        <li>Home</li>
-        <li>Mes articles</li>
-        <li>Apropos</li>
-        <li>Contact moi</li>
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="./articles.html">
+                Mes articles
+            </a>
+        </li>
+        <li>
+            <a href="./apropos.html">
+                Apropos
+            </a>
+        </li>
+        <li>
+            <a href="./contact.html">
+                Contact moi
+            </a>
+        </li>
     </ul>
     <h2>Bienvenu dans mon blogue</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, dolores error, excepturi incidunt perspiciatis et
