--- a/Tps/Tp01/parte2/ex03/index.html
+++ b/Tps/Tp01/parte2/ex03/index.html
@@ -90,16 +90,18 @@
             <article id="contact">
                 <h1>Me Contacter</h1>
                 <form action="#">
-                    <legend>
-                        Votre message ici
-                    </legend>
-                    <label for="nom">Nom :</label>
-                    <input type="text" name="nom" id="nom" placeholder="Nom">
-                    <label for="email">Email :</label>
-                    <input type="Email" name="email" id="email" placeholder="nom@este.ma">
-                    <label for="message">Message :</label>
-                    <textarea name="message" id="message" cols="80" rows="10"></textarea>
-                    <input type="submit" value="Envoyer">
+                    <fieldset>
+                        <legend>
+                            Votre message ici
+                        </legend>
+                        <label for="nom">Nom :</label>
+                        <input type="text" name="nom" id="nom" placeholder="Nom">
+                        <label for="email">Email :</label>
+                        <input type="Email" name="email" id="email" placeholder="nom@este.ma">
+                        <label for="message">Message :</label>
+                        <textarea name="message" id="message" cols="80" rows="10"></textarea>
+                        <input type="submit" value="Envoyer">
+                    </fieldset>
                 </form>
             </article>
         </section>
